<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/point_display"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/nav_header">

        <RadioButton
            android:id="@+id/per_day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Per Day" />

        <RadioButton
            android:id="@+id/per_deck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Per Deck" />

        <RadioButton
            android:id="@+id/per_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Per Tag" />

    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stats_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
