<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="preview_button_text">Preview</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">Automatically copy card content to clipboard.</string>
    <string name="memo_show_answer">Show answer</string>
    <string name="memo_no_item_title">No item</string>
    <string name="memo_no_item_message">There is no item to learn for now. If you want to cram, you can do quizzes by long clicking a db in the &quot;Recent&quot; tab.</string>
...
    <string name="memo_btn0_anki_text">Again</string>
    <string name="memo_btn1_anki_text">Again</string>
    <string name="memo_btn2_anki_text">Hard</string>
    <string name="memo_btn3_anki_text">Hard</string>
    <string name="memo_btn4_anki_text">Easy</string>
    <string name="memo_btn5_anki_text">Easy</string>
    <string name="memo_edit_dialog_title">Edit</string>
    <string name="global_settings">Global settings</string>
    <string name="settings_question_font_size">Question font size</string>
    <string name="settings_question_font_size_prompt">Font size</string>
    <string name="settings_answer_font_size">Answer font size</string>
    <string name="settings_answer_font_size_prompt">Font size</string>
    <string name="settings_question_align">Question text alignment</string>
...
    <string name="detail_reset">Reset learning data</string>
    <string name="db_text">DB</string>
    <string name="notification_text">Notification</string>
    <string name="notification_summary">Display information on the notification area even when AnyMemo is not opened.</string>
    <string name="edit_menu_br_text">Add br tag</string>
    <string name="edit_menu_image_text">Add existing image</string>
    <string name="edit_menu_new_image_text">Add new image</string>
    <string name="grade_text">Grade</string>
    <string name="enable_volume_key_text">Enable key shortcut</string>
    <string name="enable_volume_key_summary">Use volume up/down key to grade cards when learning.</string>
    <string name="donate_text">Donate</string>
    <string name="buy_pro_text">Buy Pro version</string>
    <string name="donate_summary">You can donate AnyMemo project by buying the Pro version on Android Market or pledge online at &lt;a href="https://anymemo.org"&gt;https://anymemo.org&lt;/a&gt; &lt;br /&gt; Thank you for your support.</string>
...
    <string name="record_audio_permission_denied_message">AnyMemo could not get permission to record audio.</string>
    <string name="write_storage_permission_denied_message">AnyMemo could not get permission to write db file on external storage.</string>
    <string name="db_file_is_corrupted_text">DB file is corrupted</string>
    <string name="clear_text">Clear</string>
    <string name="change_directory_permission_denied_message">AnyMemo could not get permission to change to the directory.</string>
    <string name="directory_empty_text">(Empty directory)</string>
    <string name="more_text">MORE</string>
    <string name="dropbox_item_description">Date: %1$s&lt;br&gt;Size: %2$d bytes</string>
    <string name="locale_esperanto_text">Esperanto</string>
    <string name="google_sign_in_not_successful_error_text">Google sign in is not successful</string>
    <string name="google_sign_in_empty_error_text">Google sign in result is empty</string>
    <string name="google_sign_in_account_empty_result">Unable to get Google account</string>
    <string name="tags_for_deck_header">Tags For Decks</string>
...
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="user_name">Name</string>
    <string name="creation_date">Creation date</string>
    <string name="longest_login_streak">Longest login streak</string>
    <string name="current_login_streak">Current login streak</string>
    <string name="view_statistic">View statistic</string>
    <string name="updating_database">Updating database...</string>
    <string name="invalid_rating_given">Invalid rating</string>
    <string name="edit_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_register">Register</string>
    <string name="confirm">Confirm</string>
...
